// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroFoot component test should render without crash with props 1`] = `
<div
  className="hero-foot heroFoot CLass"
/>
`;

exports[`HeroFoot component test should render without crash without props 1`] = `
<div
  className="hero-foot "
/>
`;
